--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,8 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 6.1rem;
+
+    padding: var(--normal-padding);
 }
 
 .header__icon-container {
