how it works section

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -7,6 +7,7 @@
   --secondaryBackground: #CDDBCE;
   --buttonColor: #C8BDD1;
   --font: #292929;
+  --steps: #ED9A7F;
   /* Colors End */
 
   /* Fonts Start */
