--- a/src/App/App.css
+++ b/src/App/App.css
@@ -20,7 +20,9 @@
 
   /* units */
   --normal-padding: 5rem;
+  --tablet-padding: 3.5rem;
   --vertical-padding: 3rem 0;
+  --vertical-padding-tablet: 3.5rem 0;
 }
 
 
