--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -17,3 +17,22 @@
     height: 5.4rem;
     border: none;
 }
+
+
+@media only screen and (max-width: 84.375em) {
+    /* 1350px*/
+
+    .button {
+        cursor: pointer;
+        width: 19.1rem;
+        height: 5.8rem;
+        font-size: 2.4rem;
+    }
+    
+    
+    .slim {
+        width: 26.8rem;
+        height: 6.3rem;
+        font-size: 3.2rem;
+    }
+}
