--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -48,3 +48,39 @@
     max-height: 5.4rem;
 }
 
+@media only screen and (max-width: 84.375em) {
+    /* 1350px*/
+
+    .my-work { padding: var(--vertical-padding-tablet); }
+
+    .my-work__h3 {
+        text-align: center;
+        font-family: var(--east);
+        font-weight: 400;
+        font-size: 4rem;
+        margin-bottom: 3.3rem;
+        max-width: 32.6rem;
+        height: 10rem;
+    }
+
+    .my-work__specialties {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 12.8rem;
+        width: 100%;
+        margin-bottom: 5rem;
+    }
+
+    .my-work__specialties__card--h4 {
+        font-size: 1.8rem;
+        margin: 1.5rem;
+    }
+
+    .my-work__specialties__card--description {
+        font-size: 1.4rem;
+        max-height: 5.1rem;
+    }
+
+}
