--- a/src/components/HowItWorks/HowItWorks.css
+++ b/src/components/HowItWorks/HowItWorks.css
@@ -1,4 +1,3 @@
-
 .how {
     display: flex;
     flex-direction: column;
@@ -19,18 +18,20 @@
     flex-direction: row;
     justify-content: flex-start;
     justify-content: space-between;
-    
+
     align-items: center;
     width: 100%;
     margin-bottom: 12.4rem;
 }
 
-.how__card--reverse { flex-direction: row-reverse; }
+.how__card--reverse {
+    flex-direction: row-reverse;
+}
 
 .how__card__text-container {
     display: flex;
     flex-direction: column;
-    
+
     font-family: var(--inter);
     color: var(--font);
     gap: .9rem;
@@ -54,4 +55,37 @@
 .how__card__text-container--description {
     font-weight: 400;
     font-size: 2rem;
+}
+
+@media only screen and (max-width: 84.375em) {
+    /* 1350px*/
+
+    .how {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: var(--tablet-padding);
+    }
+
+    .how__h2 {
+        margin: 3.5rem 0;
+        font-size: 3.2rem;
+    }
+
+    .how__card { margin-bottom: 3.2rem; }
+
+    .how__card__img {
+        width: 100%;
+        height: auto;
+        max-width: 40.3rem;
+        max-height: 25.2rem;
+    }
+
+    .how__card__text-container { max-width: 33.8rem; }
+
+    .how__card__text-container--question { font-size: 1.6rem; }
+
+    .how__card__text-container--step { font-size: 3.2rem; }
+
+    .how__card__text-container--description { font-size: 1.6rem; }
 }
