--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -62,9 +62,112 @@
     font-size: 2rem;
 }
 
-.about-me__content__information__certification {
+.about-me__content__certifications {
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin-top: 5.8rem;
+}
+
+
+@media only screen and (max-width: 84.375em) {
+    /* 1350px*/
+
+    .about-me__content {
+        width: 86.5rem;
+        height: 58.6rem;
+    }
+
+    .about-me__content__information__me {
+        gap: 5.5rem;
+        margin: 0 5.8rem;
+    }
+
+    .about-me__content__certifications {
+        margin-top: 2.5rem;
+    }
+
+    .about-me__content__certification {
+        margin-top: 0rem;
+    }
+
+}
+
+@media only screen and (max-width: 59.375em) {
+    /* 950px*/
+
+    .about-me--background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0, .5);
+    }
+    
+    .about-me__content {
+        width: 65.5rem;
+        height: 58.6rem;
+        overflow: auto;
+    }
+
+    .about-me__content__information__me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    gap: 5.5rem;
+    margin: 0 5.8rem;
+}
+
+.about-me__content__information__me--img {
+    width: 29.2rem;
+    height: 24rem;
+    border-radius: 50%;
+}
+
+    .about-me__content__certifications {
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+    }
+
+}
+
+
+@media only screen and (max-width: 43.125em) {
+    /* 690px*/
+
+    
+    .about-me__content {
+        width: 38.9rem;
+        height: 58.6rem;
+        overflow: auto;
+    }
+
+    .about-me__content__information__me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    gap: 3.6rem;
+    margin: 0 5.8rem;
+}
+
+.about-me__content__information__me--img {
+    width: 29.2rem;
+    height: 24rem;
+    border-radius: 50%;
+}
+
+    .about-me__content__certifications {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: 3.5rem;
+        margin-bottom: 3.5rem;
+    }
+
 }
