--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -21,8 +21,6 @@
 
 
 
-
-
 .footer__whats-app__container {
     display: flex; 
     align-items: center;
@@ -38,4 +36,31 @@
     font-family: var(--lato);
     font-weight: 700;
     font-size: 1.6rem;
+}
+
+
+
+@media only screen and (max-width: 84.375em) {
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-image: url("../../utils/imgs/footer-background-tablet.png");
+    }
+
+    .footer--text {
+        font-size: 3.6rem;
+        max-width: 58.4rem;
+        margin-top: 29.5rem;
+        margin-bottom: 3rem;
+    }
+
+    .footer__whats-app__container {
+        display: flex; 
+        align-items: center;
+        margin-top: 3rem;
+        margin-bottom: 28.9rem;
+    }
+
 }
