--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -23,7 +23,6 @@
     /* 1350px*/
 
     .button {
-        cursor: pointer;
         width: 19.1rem;
         height: 5.8rem;
         font-size: 2.4rem;
@@ -34,5 +33,22 @@
         width: 26.8rem;
         height: 6.3rem;
         font-size: 3.2rem;
+    }
+}
+
+@media only screen and (max-width: 37.1875em) {
+    /* 595px*/
+
+    .button {
+        width: 18rem;
+        height: 5rem;
+        font-size: 2.4rem;
+    }
+    
+    
+    .slim {
+        width: 21.5rem;
+        height: 5.4rem;
+        font-size: 2.4rem;
     }
 }
