--- a/src/components/MyWork/MyWork.css
+++ b/src/components/MyWork/MyWork.css
@@ -84,3 +84,34 @@
     }
 
 }
+
+@media only screen and (max-width: 37.1875em) {
+    /* 595px*/
+
+    .my-work__h3 {
+        font-size: 2.4rem;
+        margin-bottom: 5rem;
+        max-width: 20.8rem;
+        height: 6rem;
+    }
+
+    .my-work__specialties__card--h4 {
+        font-size: 1.4rem;
+        margin: 1.5rem;
+    }
+
+    .my-work__specialties__card--description {
+        font-size: 1.2rem;
+        max-height: 4.5rem;
+    }
+
+    .my-work__specialties {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 3.5rem;
+        width: 100%;
+        margin-bottom: 5rem;
+    }
+}
